--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 <h1>Taller de TIC</h1>
+
+<h1>Lista de alumnos presentes en el Taller de Tecnologías de la Información</h1>
+<h1 style="background: red">Redy Demetrio Delgado Sequeiros</h1>
+<h1 style=”background: blue”>Jairo Diego Meza Pezet</h1>
+<h1 style="background: red">Yuliana Papel Cconcha <\w2>
+<h1 style=”background: blue”>Angela Angulo Cabrera</h1> 
+ 
+<h1>style=”background:blue”>Luis Daniel
+<h1> sytle=”background: blue”> Mayki Valencia Solis</h1>
+<h1>style=”background: red”>RobertoE
+<h1> style=”background: green”>Gardenia Huaman Borda</h1
+
+
+<h1 style=”backgroundOlivera Martinez Anderson Yulinho<h1>
+ ,.
+<h1>style=JEREMY CUSICUNA HUILLCA <h1>
